# contract_financial_analysis

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
cfa/: dataset.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-initial_pipeline.ipynb
